// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render renders correctly for class components when providing a key 1`] = `
<div>
  test class content
</div>
`;

exports[`#render renders correctly for class components without providing a key 1`] = `
<div>
  test class content
</div>
`;

exports[`#render renders correctly for function components when providing a key 1`] = `
<div>
  test function content
</div>
`;

exports[`#render renders correctly for function components without providing a key 1`] = `
<div>
  test function content
</div>
`;

exports[`#render renders correctly for intrinsic elements when providing a key 1`] = `
<img
  src="test.png"
/>
`;

exports[`#render renders correctly for intrinsic elements without providing a key 1`] = `
<img
  src="test.png"
/>
`;
